Fixed overflow of table on large screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -483,6 +483,9 @@ PARALLAX WINDOWS IF NEEDED
     .bgimg-initial, .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5, .bgimg-6, .bgimg-7, .bgimg-8{
       width: 100%;
     }
+    .table-responsive {
+        overflow-x: hidden !important;
+    }
 }
 
 @media screen and ( min-width: 960px ) {
@@ -516,11 +519,11 @@ PARALLAX WINDOWS IF NEEDED
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(255, 255, 255, 0.8); 
+    background: rgba(10, 104, 255, 0.8); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(255, 255, 255, 0.4); 
+    background: rgba(10, 104, 255, 0.4); 
 }
 .caption-block {
 	width: 100%;
